--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<!--Mi primera página html dinámica-->
+<!-- Mi primera página html dinámica -->
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head">
         <title>TechShop</title>
-        <meta charset="UTF-8"/>  
+        <meta charset="UTF-8"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" 
-              rel="stylesheet" />
+              rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" 
-              rel="stylesheet" />
+              rel="stylesheet"/>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>
-        <header th:fragment="header" class="header fixed-top">
+        <header th:fragment="header" class="header fixed-top">     
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
-                    <a class="navbar-brand" th:ref="@{/}">[[#{aplicacion.titulo}]]</a>
+                    <a class="navbar-brand" th:href="@{/}">[[#{aplicacion.titulo}]]</a>
                     <button class="navbar-toggler"
                             data-bs-toggle="collapse"
                             data-bs-target="#navbarCollapse">
@@ -26,23 +26,33 @@
                     <div id="navbarCollapse"
                          class="collapse navbar-collapse justify-content-between">
                         <ul class="navbar-nav">
-                            <li class="nav-item px-2">
-                                <a class="nav-link" th:ref="@{/categoria/listado}">[[#{plantilla.categorias}]]</a>
-                            </li>
-                            <li class="nav-item px-2">
-                                <a class="nav-link" th:ref="@{/producto/listado}">[[#{plantilla.productos}]]</a>
-                            </li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" 
                                    data-bs-toggle="dropdown"
-                                   th:ref="#"
+                                   href="#"
                                    role="button"
-                                   aria-expanded="false"
-                                   >[[#{plantilla.extras}]]</a>
+                                   aria-expanded="false">[[#{plantilla.extras}]]</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" th:ref="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
-                                    <li><a class="dropdown-item" th:ref="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
-                                    <li><a class="dropdown-item" th:ref="@{/reportes/principal}">[[#{plantilla.reportes}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/reportes/principal}">[[#{plantilla.reportes}]]</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" 
+                                   data-bs-toggle="dropdown"
+                                   href="#"
+                                   role="button"
+                                   aria-expanded="false">[[#{plantilla.idioma}]]</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" th:href="@{/(lang=es)}">Español</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/(lang=en)}">English</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/(lang=fr)}">Francais</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/(lang=pt)}">Portugaise</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -50,9 +60,8 @@
                 </div>
             </nav>
         </header>
-
         <footer th:fragment="footer" class="p-2 mt-5 bg-info text-white text-center fixed-bottom lead">
-            &COPY;[[#{plantilla.derechos}]]
+            &COPY; [[#{plantilla.derechos}]]
         </footer>
     </body>
 </html>
