--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -16,17 +16,17 @@
                         <button type="button" 
                                 class="btn btn-primary btn-block" 
                                 data-bs-toggle="modal" 
-                                data-bs-target="#agregarCategoria">
-                            <i class="fas fa-plus"></i> [[#{categoria.agregar}]]
+                                data-bs-target="#agregarProducto">
+                            <i class="fas fa-plus"></i> [[#{producto.agregar}]]
                         </button>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- 2 Fragmento para agregar categoria, es la ventana modal -->
-        <section th:fragment="agregarCategoria">
-            <div id="agregarCategoria" 
+        <!-- 2 Fragmento para agregar producto, es la ventana modal -->
+        <section th:fragment="agregarProducto">
+            <div id="agregarProducto" 
                  class="modal fade" 
                  tabindex="-1" 
                  aria-labelledby="exampleModalLabel" 
@@ -34,27 +34,27 @@
                 <div class="modal-dialog modal-md">
                     <div class="modal-content">
                         <div class="modal-header bg-info text-white">
-                            <h5 class="modal-title">[[#{categoria.agregar}]]</h5>
+                            <h5 class="modal-title">[[#{producto.agregar}]]</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div> 
-                        <form th:action="@{/categoria/guardar}"
-                              th:object="${categoria}"
+                        <form th:action="@{/producto/guardar}"
+                              th:object="${producto}"
                               method="POST" 
                               class="was-validated" 
                               enctype="multipart/form-data">
                             <div class="modal-body">
                                 <div class="mb-3">
-                                    <label for="descripcion">[[#{categoria.descripcion}]]</label>
+                                    <label for="descripcion">[[#{producto.descripcion}]]</label>
                                     <input type="text" class="form-control" 
                                            name="descripcion" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="activo">[[#{categoria.activo}]]</label>
+                                    <label for="activo">[[#{producto.activo}]]</label>
                                     <input class="form-check-input" type="checkbox" 
                                            name="activo" id="activo"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="imagen">[[#{categoria.rutaImagen}]]</label>
+                                    <label for="imagen">[[#{producto.rutaImagen}]]</label>
                                     <input class="form-control" 
                                            type="file" 
                                            name="imagenFile" 
@@ -72,18 +72,18 @@
         </section>
 
         <!-- 4 Fragmento que se utiliza en la página modifca.html -->
-        <section th:fragment="editarCategoria">
+        <section th:fragment="editarProducto">
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <form method="POST"
-                          th:action="@{/categoria/guardar}" 
-                          th:object="${categoria}"
+                          th:action="@{/producto/guardar}" 
+                          th:object="${producto}"
                           class="was-validated"                          
                           enctype="multipart/form-data">
-                        <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
+                        <input type="hidden" name="idProducto" th:field="*{idProducto}"/>
                         <input type="hidden" name="rutaImagen" th:field="*{rutaImagen}"/>
-                        <section th:replace="~{categoria/fragmentos :: botonesEditar}"/>
+                        <section th:replace="~{producto/fragmentos :: botonesEditar}"/>
                         <div id=details>
                             <div class="container">
                                 <div class="row">
@@ -94,13 +94,13 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="mb-3">
-                                                    <label for="descripcion">[[#{categoria.descripcion}]]</label>
+                                                    <label for="descripcion">[[#{producto.descripcion}]]</label>
                                                     <input type="text" class="form-control" 
                                                            name="descripcion" th:field="*{descripcion}"
                                                            required="true">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="activo">[[#{categoria.activo}]]</label>
+                                                    <label for="activo">[[#{producto.activo}]]</label>
                                                     <input class="form-check-input" 
                                                            type="checkbox" 
                                                            name="activo" 
@@ -108,10 +108,10 @@
                                                            th:field="*{activo}">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="imagen">[[#{categoria.rutaImagen}]]</label>
+                                                    <label for="imagen">[[#{producto.rutaImagen}]]</label>
                                                     <input class="form-control" type="file" name="imagenFile"
                                                            onchange="readURL(this);" />
-                                                    <img id="blah" th:src="@{${categoria.rutaImagen}}" alt="your image" height="200"/>
+                                                    <img id="blah" th:src="@{${producto.rutaImagen}}" alt="your image" height="200"/>
                                                 </div>
                                             </div>
                                         </div>
@@ -128,12 +128,12 @@
             <div class="container py-4 mb-4 bg-light">
                 <div class="row">
                     <div class="col-md-4 d-grid">
-                        <a th:href="@{/categoria/listado}" class="btn btn-primary">
+                        <a th:href="@{/producto/listado}" class="btn btn-primary">
                             <i class="fas fa-arrow-left"></i> [[#{accion.regresar}]]
                         </a>
                     </div>
                     <div class="col-md-4 d-grid">                                
-                        <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
+                        <a th:href="@{/producto/eliminar/}+${producto.idProducto}"
                            class="btn btn-danger">
                             <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
                         </a>
@@ -148,31 +148,31 @@
         </section>
         
         <!-- 3  -->
-        <section th:fragment="listadoCategorias">
+        <section th:fragment="listadoProductos">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
                         <div class="card mt-3">
                             <div class="card-header">
-                                <h4>[[#{categoria.listado}]]</h4>
+                                <h4>[[#{producto.listado}]]</h4>
                             </div>
                             <div class="card-body">
 
-                                <div th:if='${categorias != null and !categorias.empty}'>
+                                <div th:if='${productos != null and !productos.empty}'>
 
                                     <table class="table table-striped table-hover">
                                         <thead class="table-dark">
                                             <tr>
                                                 <th>#</th>
-                                                <th>[[#{categoria.descripcion}]]</th>
-                                                <th>[[#{categoria.activo}]]</th>
-                                                <th>[[#{categoria.rutaImagen}]]</th>
+                                                <th>[[#{producto.descripcion}]]</th>
+                                                <th>[[#{producto.activo}]]</th>
+                                                <th>[[#{producto.rutaImagen}]]</th>
                                                 <th></th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr th:each="c : ${categorias}">
-                                                <td>[[${c.idCategoria}]]</td>
+                                            <tr th:each="c : ${productos}">
+                                                <td>[[${c.idProducto}]]</td>
                                                 <td>[[${c.descripcion}]]</td>
                                                 <td th:text="${c.activo} ? 'Activa' : 'Inactiva'"></td>
                                                 <td>
@@ -181,11 +181,11 @@
                                                 </td>
                                                 <td>
                                                     <a class="btn btn-danger"
-                                                       th:href="@{/categoria/eliminar/}+${c.idCategoria}">
+                                                       th:href="@{/producto/eliminar/}+${c.idProducto}">
                                                         <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a> 
 
                                                     <a class="btn btn-warning"
-                                                       th:href="@{/categoria/modificar/}+${c.idCategoria}">
+                                                       th:href="@{/producto/modificar/}+${c.idProducto}">
                                                         <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a> 
                                                 </td>
                                             </tr>
@@ -194,7 +194,7 @@
 
                                 </div>
 
-                                <div th:if='${categorias == null or categorias.empty}'>
+                                <div th:if='${productos == null or productos.empty}'>
                                     <h4>[[#{lista.vacia}]]</h4>
 
                                 </div>
@@ -204,8 +204,8 @@
                     </div>
                     <div class="col-md-3">
                         <div class='card text-center text-white bg-success m-3'>
-                            <h3>[[#{categoria.total}]]</h3>
-                            <h4><i class='fas fa-layer-group'></i> [[${totalCategorias}]]</h4>
+                            <h3>[[#{producto.total}]]</h3>
+                            <h4><i class='fas fa-layer-group'></i> [[${totalProductos}]]</h4>
                         </div>
                     </div>
 
