--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -43,11 +43,40 @@
                               class="was-validated" 
                               enctype="multipart/form-data">
                             <div class="modal-body">
+
+                                <div class="mb-3">
+                                    <label for="idCategoria">[[#{producto.categoria}]]</label>
+                                    <select name="idCategoria" 
+                                            class="form-select">
+                                        <option th:each="c : ${categorias}" 
+                                                th:value="${c.idCategoria}">[[${c.descripcion}]]</option>
+                                    </select>
+                                </div>
+
                                 <div class="mb-3">
                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
                                     <input type="text" class="form-control" 
                                            name="descripcion" required="true"/>
                                 </div>
+
+                                <div class="mb-3">
+                                    <label for="detalle">[[#{producto.detalle}]]</label>
+                                    <input type="text" class="form-control" 
+                                           name="detalle" required="true"/>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="precio">[[#{producto.precio}]]</label>
+                                    <input type="number" class="form-control" 
+                                           name="precio" required="true"/>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="existencias">[[#{producto.existencias}]]</label>
+                                    <input type="number" class="form-control" 
+                                           name="existencias" required="true"/>
+                                </div>
+
                                 <div class="mb-3">
                                     <label for="activo">[[#{producto.activo}]]</label>
                                     <input class="form-check-input" type="checkbox" 
@@ -92,6 +121,17 @@
                                             <div class="card-header">
                                                 <h4>[[#{accion.actualizar}]]</h4>
                                             </div>
+
+                                            <div class="mb-3">
+                                                <label for="idCategoria">[[#{producto.categoria}]]</label>
+                                                <select name="idCategoria" 
+                                                        th:field="*{idCategoria}"
+                                                        class="form-select">
+                                                    <option th:each="c : ${categorias}" 
+                                                            th:value="${c.idCategoria}">[[${c.descripcion}]]</option>
+                                                </select>
+                                            </div>
+
                                             <div class="card-body">
                                                 <div class="mb-3">
                                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
@@ -99,6 +139,29 @@
                                                            name="descripcion" th:field="*{descripcion}"
                                                            required="true">
                                                 </div>
+
+                                                <div class="mb-3">
+                                                    <label for="detalle">[[#{producto.detalle}]]</label>
+                                                    <input type="text" class="form-control" 
+                                                           name="detalle"
+                                                           th:field="*{detalle}"
+                                                           required="true"/>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label for="precio">[[#{producto.precio}]]</label>
+                                                    <input type="number" class="form-control" 
+                                                           name="precio"
+                                                           th:field="*{precio}"
+                                                           required="true"/>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label for="existencias">[[#{producto.existencias}]]</label>
+                                                    <input type="number" class="form-control" 
+                                                           th:field="*{existencias}" name="existencias" required="true"/>
+                                                </div>
+
                                                 <div class="mb-3">
                                                     <label for="activo">[[#{producto.activo}]]</label>
                                                     <input class="form-check-input" 
@@ -146,7 +209,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- 3  -->
         <section th:fragment="listadoProductos">
             <div class="container">
@@ -159,14 +222,17 @@
                             <div class="card-body">
 
                                 <div th:if='${productos != null and !productos.empty}'>
-
                                     <table class="table table-striped table-hover">
                                         <thead class="table-dark">
                                             <tr>
                                                 <th>#</th>
                                                 <th>[[#{producto.descripcion}]]</th>
+                                                <th>[[#{producto.precio}]]</th>
+                                                <th>[[#{producto.existencias}]]</th>
+                                                <th>[[#{producto.total}]]</th>
+                                                <th>[[#{producto.categoria}]]</th>
                                                 <th>[[#{producto.activo}]]</th>
-                                                <th>[[#{producto.rutaImagen}]]</th>
+                                                <th>[[#{producto.imagen}]]</th>
                                                 <th></th>
                                             </tr>
                                         </thead>
@@ -174,11 +240,13 @@
                                             <tr th:each="c : ${productos}">
                                                 <td>[[${c.idProducto}]]</td>
                                                 <td>[[${c.descripcion}]]</td>
-                                                <td th:text="${c.activo} ? 'Activa' : 'Inactiva'"></td>
-                                                <td>
-                                                    <img th:src="@{${c.rutaImagen}}" height="75"/>
+                                                <td class="text-end">[[${c.precio}]]</td>
+                                                <td class="text-center">[[${c.existencias}]]</td>
+                                                <td class="text-end">[[${c.precio*c.existencias}]]</td>
+                                                <td>[[${c.categoria.descripcion}]]</td>
 
-                                                </td>
+                                                <td th:text="${c.activo} ? 'Activa' : 'Inactiva'"></td>
+                                                <td><img th:src="@{${c.rutaImagen}}" height="75"/></td>
                                                 <td>
                                                     <a class="btn btn-danger"
                                                        th:href="@{/producto/eliminar/}+${c.idProducto}">
