--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -22,8 +22,8 @@
                                th:href="@{/pruebas/listado/}+${c.idCategoria}"
                                >[[${c.descripcion}]]</a>
                         </li>
-                        
-                        
+
+
                     </ul>
                 </div>
             </div>
@@ -32,69 +32,136 @@
         <!-- 2. Listado de tarjetas de productos -->
         <section th:fragment="tarjetas">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-9">
-                        <div class="card mt-3">
+                <div th:if='${productos != null and !productos.empty}'>
+                    <div class="row row-cols-4 p-2">
+                        <div th:each="p: ${productos}"  
+                             class="card">
                             <div class="card-header">
-                                <h4>[[#{producto.listado}]]</h4>
+                                <h4>[[${p.descripcion}]]</h4>
+                                <figure>
+                                    <img th:src="${p.rutaImagen}" height="150"/>
+                                    <figcaption>
+                                        ¢[[${p.precio}]] ([[${p.existencias}]])
+                                        <form>
+                                            <button class="btn btn-light">
+                                                <i class="fa-solid fa-cart-plus"></i>
+                                            </button>
+                                        </form>
+                                    </figcaption>
+                                </figure>
                             </div>
                             <div class="card-body">
-
-                                <div th:if='${productos != null and !productos.empty}'>
-                                    <table class="table table-striped table-hover">
-                                        <thead class="table-dark">
-                                            <tr>
-                                                <th>#</th>
-                                                <th>[[#{producto.descripcion}]]</th>
-                                                <th>[[#{producto.precio}]]</th>
-                                                <th>[[#{producto.existencias}]]</th>
-                                                <th>[[#{producto.total}]]</th>
-                                                <th>[[#{producto.categoria}]]</th>
-                                                <th>[[#{producto.activo}]]</th>
-                                                <th>[[#{producto.imagen}]]</th>
-                                                <th></th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr th:each="c : ${productos}">
-                                                <td>[[${c.idProducto}]]</td>
-                                                <td>[[${c.descripcion}]]</td>
-                                                <td class="text-end">[[${c.precio}]]</td>
-                                                <td class="text-center">[[${c.existencias}]]</td>
-                                                <td class="text-end">[[${c.precio*c.existencias}]]</td>
-                                                <td>[[${c.categoria.descripcion}]]</td>
-
-                                                <td th:text="${c.activo} ? 'Activa' : 'Inactiva'"></td>
-                                                <td><img th:src="@{${c.rutaImagen}}" height="75"/></td>
-                                                <td>
-                                                    <a class="btn btn-danger"
-                                                       th:href="@{/producto/eliminar/}+${c.idProducto}">
-                                                        <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a> 
-
-                                                    <a class="btn btn-warning"
-                                                       th:href="@{/producto/modificar/}+${c.idProducto}">
-                                                        <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a> 
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-
-                                </div>
-
-                                <div th:if='${productos == null or productos.empty}'>
-                                    <h4>[[#{lista.vacia}]]</h4>
-
-                                </div>
-
+                                <p>[[${p.detalle}]]</p>
                             </div>
                         </div>
+
                     </div>
-                    <div class="col-md-3">
-                        <div class='card text-center text-white bg-success m-3'>
-                            <h3>[[#{producto.total}]]</h3>
-                            <h4><i class='fas fa-layer-group'></i> [[${totalProductos}]]</h4>
+
+                </div>
+                <div th:if='${productos == null or productos.empty}'>
+                    <h4>[[#{lista.vacia}]]</h4>
+                </div>
+            </div>
+        </section>
+
+        <!-- 3 Sección para crear formularios que filtran los productos por precio-->
+        <section th:fragment="consultas">
+            <div class="row row-cols-3 p-2">
+                
+               <!-- Tarjeta para consulta Ampliada -->
+                <div class="card p-2">
+                    <form method="post"
+                          action="/pruebas/consultasAmpliadas">
+                        <div class="card-header bg-primary text-white text-center">
+                            <h4>[[#{pruebas.ampliadas}]]</h4>
                         </div>
-                    </div>
+                        <div class="card-body bg-warning">
+                            <div class="form-group mb-3">
+                                <label>[[#{pruebas.precio.inferior}]]</label>
+                                <input class="form-control"
+                                       type="number"
+                                       name="precioInf"
+                                       th:value="${precioInf}"/>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label>[[#{pruebas.precio.superior}]]</label>
+                                <input class="form-control"
+                                       type="number"
+                                       name="precioSup"
+                                       th:value="${precioSup}"/>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-success text-white text-center">
+                            <button type="submit"
+                                    class="btn btn-primary">
+                                <i class="fa-solid fa-magnifying-glass"></i> [[#{pruebas.ampliadas}]]
+                            </button>
+                        </div>
+                    </form>
+
+                 <!-- Tarjeta para consulta JPQL -->
+                </div>
+                <div class="card p-2">
+                    <form method="post"
+                          action="/pruebas/consultasJPQL">
+                        <div class="card-header bg-primary text-white text-center">
+                            <h4>[[#{pruebas.jpql}]]</h4>
+                        </div>
+                        <div class="card-body bg-warning">
+                            <div class="form-group mb-3">
+                                <label>[[#{pruebas.precio.inferior}]]</label>
+                                <input class="form-control"
+                                       type="number"
+                                       name="precioInf"
+                                       th:value="${precioInf}"/>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label>[[#{pruebas.precio.superior}]]</label>
+                                <input class="form-control"
+                                       type="number"
+                                       name="precioSup"
+                                       th:value="${precioSup}"/>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-success text-white text-center">
+                            <button type="submit"
+                                    class="btn btn-primary">
+                                <i class="fa-solid fa-magnifying-glass"></i> [[#{pruebas.jpql}]]
+                            </button>
+                        </div>
+                    </form>
+
+                <!-- Tarjeta para consulta SQL -->
+                </div>
+                <div class="card p-2">
+                    <form method="post"
+                          action="/pruebas/consultasSQL">
+                        <div class="card-header bg-primary text-white text-center">
+                            <h4>[[#{pruebas.nativo}]]</h4>
+                        </div>
+                        <div class="card-body bg-warning">
+                            <div class="form-group mb-3">
+                                <label>[[#{pruebas.precio.inferior}]]</label>
+                                <input class="form-control"
+                                       type="number"
+                                       name="precioInf"
+                                       th:value="${precioInf}"/>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label>[[#{pruebas.precio.superior}]]</label>
+                                <input class="form-control"
+                                       type="number"
+                                       name="precioSup"
+                                       th:value="${precioSup}"/>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-success text-white text-center">
+                            <button type="submit"
+                                    class="btn btn-primary">
+                                <i class="fa-solid fa-magnifying-glass"></i> [[#{pruebas.nativo}]]
+                            </button>
+                        </div>
+                    </form>
 
                 </div>
             </div>
