--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -14,6 +14,7 @@
                 <div class="row">
                     <div class="col-md-3">   
                         <button type="button" 
+                                sec:authorize='hasRole("ROLE_ADMIN")'
                                 class="btn btn-primary btn-block" 
                                 data-bs-toggle="modal" 
                                 data-bs-target="#agregarCategoria">
@@ -146,7 +147,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- 3  -->
         <section th:fragment="listadoCategorias">
             <div class="container">
@@ -167,7 +168,7 @@
                                                 <th>[[#{categoria.descripcion}]]</th>
                                                 <th>[[#{categoria.activo}]]</th>
                                                 <th>[[#{categoria.rutaImagen}]]</th>
-                                                <th></th>
+                                                <th sec:authorize='hasRole("ROLE_ADMIN")'></th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -179,7 +180,7 @@
                                                     <img th:src="@{${c.rutaImagen}}" height="75"/>
 
                                                 </td>
-                                                <td>
+                                                <td sec:authorize='hasRole("ROLE_ADMIN")'>
                                                     <a class="btn btn-danger"
                                                        th:href="@{/categoria/eliminar/}+${c.idCategoria}">
                                                         <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a> 
