--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -25,7 +25,8 @@
                     </button>
                     <div id="navbarCollapse"
                          class="collapse navbar-collapse justify-content-between">
-                        <ul class="navbar-nav">
+                        <ul sec:authorize='hasRole("ROLE_VENDEDOR")'
+                            class="navbar-nav">
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
                             <li class="nav-item dropdown">
@@ -54,6 +55,36 @@
                                     <li><a class="dropdown-item" th:href="@{/(lang=fr)}">Francais</a></li>
                                     <li><a class="dropdown-item" th:href="@{/(lang=pt)}">Portugaise</a></li>
                                 </ul>
+                            </li>
+                        </ul>
+                        <div id="resultBlock">
+
+                        </div>
+                        <ul class="navbar-nav"
+                            sec:authorize='!isAuthenticated()'>
+                            <li class='nav-item'>
+                                <a class='nav-menu-link nav-link'
+                                   th:href='@{/login}'>
+                                    <i class="fas fa-right-to-bracket"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav"
+                            sec:authorize='isAuthenticated()'>
+                            <li class='nav-item text-white my-auto'>
+                                <img th:src="@{${session.imagenUsuario}}"                                      
+                                     height="40" 
+                                     class="rounded-circle"
+                                     alt=""/>
+                                <span sec:authentication='name'>Jhon</span>
+                            </li>
+                            <li class='nav-item text-white my-auto'>
+                                <form method="post" 
+                                      th:action='@{/logout}'>
+                                    <button class='btn btn-dark'>
+                                        <i class="fas fa-right-from-bracket"></i> 
+                                    </button>
+                                </form>
                             </li>
                         </ul>
                     </div>
