--- a/src/main/resources/templates/registro/salida.html
+++ b/src/main/resources/templates/registro/salida.html
@@ -8,10 +8,9 @@
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
-        
-        <section th:replace="~{pruebas/fragmentos :: tarjetas}"/>
+
+        <section th:replace="~{registro/fragmentos :: salida}"/>
 
         <footer th:replace="~{layout/plantilla :: footer}"/>
-
     </body>
 </html>
